syntax = "proto3";

package placeholder;

message Empty {}

message Post {
  string id = 1;
  string title = 3;
  string body = 4;
}

message Comment {
  string id = 1;
  string name = 3;
  string email = 4;
  string body = 5;
}

message GetPostRequest {
  string postID = 1;
}

message GetCommentsRequest {
  string postID = 1;
}

message GetPostResponse {
  Post post = 1;
}

message GetPostsResponse {
  repeated Post posts = 1;
}

message GetCommentsResponse {
  repeated Comment comments = 1;
}

service Placeholder {
  rpc getPost (GetPostRequest) returns (GetPostResponse);
  rpc getPosts (Empty) returns (GetPostsResponse);
  rpc getComments(GetCommentsRequest) returns (GetCommentsResponse);
}
